cmake_minimum_required(VERSION 3.16)

project(Ejercicio3 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(Ejercicio3 main.cpp
    medicamento.h medicamento.cpp
    analgesico.h analgesico.cpp
    Dispensario.h)

include(GNUInstallDirs)
install(TARGETS Ejercicio3
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)
